--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -13,10 +13,19 @@
   <body>
     <!-- navbar -->
     <div id="nav">
+      {% if user %}
+      <p class="user" id="user">You are logged in as {{user}}</p>
+      {% endif %}
       <img id="nav-icon" src="{{servlet-context}}/img/threelines.png" alt="Menu"/>
       <ul id="nav-menu" class="nav">
-        <li class="{{home-selected}}"><a href="{{servlet-context}}/">Home</a></li>
+        <li class="{{wiki-selected}}"><a href="{{servlet-context}}/">Home</a></li>
         <li class="{{edit-selected}}"><a href="{{servlet-context}}/edit?content={{title}}">Edit this page</a></li>
+        <li class="{{auth-selected}}"><a href="{{servlet-context}}/auth">
+        	{% if user %}
+        	Log out
+        	{% else %}
+        	Log in
+        	{% endif %}</a></li>
       </ul>
     </div>
 
