--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -13,7 +13,7 @@
             <textarea name="src" id="src" rows="25" cols="80">{{content}}</textarea>
             <p class="widget">
                 <label for="submit">When you have finished editing</label>
-                <input name="submit" id="submit" type="submit" value="Save!"/>
+                <input name="submit" id="submit" type="submit" class="action" value="Save!"/>
             </p>
         </form>
     </div>
