--- a/resources/public/css/standard.css
+++ b/resources/public/css/standard.css
@@ -1,3 +1,23 @@
+/* 
+ * Smeagol: a very simple Wiki engine
+ * Copyright (C) 2014 Simon Brooke
+
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, 
+ * USA.
+ */
+ 
 body {
   margin: 0;
   padding: 0;
@@ -84,9 +104,10 @@ li.nav-item a:active { background: gray; color: white; }
   padding: 0 2em;
   text-align: center;
   color:white;
-  background:rgba(196,196,196,0.95);
+  background:rgba(128,128,128,0.95);
   width: 100%;
   margin: 0;
+  padding: 0.1em 10%;
   bottom:0;
   position:fixed;
   z-index:150;
