--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -11,6 +11,11 @@
         <form action="{{servlet-context}}/edit" method="POST">
             <input type="hidden" name="content" value="{{title}}"/>
             <textarea name="src" id="src" rows="25" cols="80">{{content}}</textarea>
+        	<p class="widget">
+                <label for="summary">What have you changed?</label>
+                <input name="summary" id="summary" type="text" 
+                	value="{%if exists%}{%else%}New file {{title}}{%endif%}"/>
+        	</p>
             <p class="widget">
                 <label for="submit">When you have finished editing</label>
                 <input name="submit" id="submit" type="submit" class="action" value="Save!"/>
