--- a/resources/templates/wiki.html
+++ b/resources/templates/wiki.html
@@ -1,13 +1,9 @@
 {% extends "templates/base.html" %}
 {% block content %}
-    <div id="header" class="wiki">
-        <h1>{{title}}</h1>
-        {{header|safe}}
-    </div>
-    <div id="left-bar"  class="wiki">
-        {{left-bar|safe}}
-    </div>
     <div id="content" class="wiki">
+    	<div class="minor-controls">
+    		<a href="history?page={{title}}">History</a>
+    	</div>
         {{content|safe}}
     </div>
 {% endblock %}
