--- a/resources/templates/wiki.html
+++ b/resources/templates/wiki.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div id="content" class="wiki">
     	<div class="minor-controls">
-    		<a href="history?page={{title}}">History</a>
+    		<a href="history?page={{page}}">History</a>
     	</div>
         {{content|safe}}
     </div>
