--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -7,7 +7,7 @@
                 <p class="widget">
                     <label for="summary">What have you changed?</label>
                     <input name="summary" id="summary" type="text"
-                        value="{%if exists%}{%else%}New file {{title}}{%endif%}"/>
+                        value="{%if exists%}{%else%}New file {{title}}{%endif%}" required/>
                 </p>
                 <p class="widget">
                     <label for="submit">When you have finished editing</label>
