--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -52,6 +52,17 @@
       {% block content %}
       {% endblock %}
     </div>
+    <div id="cookies">
+        <div id="more-about-cookies">
+            This website stores session information as a 'cookie' on your browser. This helps us show you the content
+            you want to see. This cookie does not identify you, and cannot be read by other websites. It is deleted by
+            your browser as soon as you leave this site. This website does not use any third party cookies, so your
+            visit here cannot be tracked by other websites.
+        </div>
+        <div id="about-cookies">
+            About cookies
+        </div>
+    </div>
     <div id="footer">
        <div id="credits">
            One Wiki to rule them all ||
