--- a/resources/public/css/standard.css
+++ b/resources/public/css/standard.css
@@ -123,22 +123,22 @@ li.nav-item a:active { background: gray; color: white; }
 /* about-cookies box: permanently visible part of cookies information box */
 #about-cookies {
   clear: right;
-  width: 20%;
+  width: 10em;
+  font-size: 66%;
   float: right;
   text-align: right;
-  font-size: 66%;
   padding: 0.25em 2em;
-  color: white;
-  background-color: maroon;
+	color: white;
+  background:rgba(40,40,40,0.8);
 }
 
 /* more-about-cookies box, normally hidden */
 #more-about-cookies {
   display: none;
 	padding: 0.25em 2em;
-	color: maroon;
-  background:rgba(196,196,196,0.66);
-	border: thin solid maroon;
+	color: white;
+  background:rgba(40,40,40,0.8);
+	border-bottom: thin solid white;
 }
 
 /* but magically appears on mouseover */
@@ -179,10 +179,16 @@ li.nav-item a:active { background: gray; color: white; }
 }
 
 .minor-controls {
+  width: 10em;
 	float: right;
-	padding: 0.1em 2em;
-	background-color: silver;
+  padding: 0.25em 2em;
+	color: white;
+  background:rgba(40,40,40,0.8);
 	font-size: 66%;
+}
+.minor-controls a {
+  float: right;
+  color: white;
 }
 
 .message {
