--- a/resources/public/css/standard.css
+++ b/resources/public/css/standard.css
@@ -57,6 +57,7 @@ body {
 
 #nav-menu {
 	margin: 0;
+  padding: 0;
 }
 
 #nav ul li {
@@ -165,17 +166,21 @@ li.nav-item a:active { background: gray; color: white; }
         (document.documentElement.clientHeight-this.offsetHeight)));
 }
 
-.error {
-    background-color: red;
-    color: white;
+
+.change {
+  background-color: rgb( 223, 223, 223);
+  border: thin solid silver;
 }
 
-.widget {
-	background-color: silver;
- 	border: thin solid white;
- 	margin-top: 0;
- 	margin-bottom: 0;
+
+.error {
   width: 100%;
+  background-color: red;
+  color: white;
+}
+
+.message {
+  border: thin solid red;
 }
 
 .minor-controls {
@@ -186,25 +191,34 @@ li.nav-item a:active { background: gray; color: white; }
   background:rgba(40,40,40,0.8);
 	font-size: 66%;
 }
+
 .minor-controls a {
   float: right;
   color: white;
 }
 
-.message {
-  border: thin solid red;
+.warn {
+  color: maroon;
+}
+
+.widget {
+	background-color: silver;
+ 	border: thin solid white;
+ 	margin-top: 0;
+ 	margin-bottom: 0;
+  width: 100%;
 }
 
 .wiki {
   margin: 0;
 }
 
-div.error {
-  width: 100%;
-}
-
 form {
   border: thin solid silver;
+}
+
+del {
+  color: red;
 }
 
 div.content, form, p, pre, h1, h2, h3, h4, h5 {
@@ -231,6 +245,10 @@ input.action-dangerous {
 input.required:after {
   content: " \*";
   color: red;
+}
+
+ins {
+  color: green;
 }
 
 label {
