--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -3,11 +3,8 @@
   <head>
     <title>{{title}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link href="{{servlet-context}}/css/phone.css" media="only screen and (max-device-width: 480px)" rel="stylesheet" type="text/css" />
-    <link href="{{servlet-context}}/css/tablet.css" media="only screen and (min-device-width: 481px) and (max-device-width: 1024px)" rel="stylesheet" type="text/css" />
-    <link href="{{servlet-context}}/css/standard.css" media="screen and (min-device-width: 1025px)" rel="stylesheet" type="text/css" />
+    <link href="{{servlet-context}}/content/stylesheet.css" media="screen and (min-device-width: 1025px)" rel="stylesheet" type="text/css" />
     <link href="{{servlet-context}}/css/print.css" media="print" rel="stylesheet" type="text/css" />
-    <link href="{{servlet-context}}/css/states.css" rel="stylesheet" type="text/css" />
     {% block extra-headers %}
     {% endblock %}
   </head>
@@ -22,7 +19,6 @@
           <img id="nav-icon" src="{{servlet-context}}/img/threelines.png" alt="Menu"/>
           <ul id="nav-menu" class="nav">
             <li class="{{wiki-selected}}"><a href="{{servlet-context}}/">Home</a></li>
-            <li class="{{edit-selected}}"><a href="{{servlet-context}}/edit?page={{title}}">Edit this page</a></li>
             <li class="{{auth-selected}}"><a href="{{servlet-context}}/auth">
                 {% if user %}
                 Log out
@@ -39,31 +35,30 @@
     </div>
 
     <div id="main-container" class="container">
+      {% if message %}
+      <div id="message">
+        <p class="message">{{message}}</p>
+      </div>
+      {% endif %}
+      {% if error %}
+      <div id="error">
+        <p class="error">{{error}}</p>
+      </div>
+      {% endif %}
 
-	  {% if message %}
-		<div id="message">
-			<p class="message">{{message}}</p>
-		</div>
-	  {% endif %}
-	  {% if error %}
-		<div id="error">
-			<p class="error">{{error}}</p>
-		</div>
-	  {% endif %}
-
-    {% block content %}
-    {% endblock %}
+      {% block content %}
+      {% endblock %}
     </div>
     <div id="cookies">
-        <div id="more-about-cookies">
-            This website stores session information as a 'cookie' on your browser. This helps us show you the content
-            you want to see. This cookie does not identify you, and cannot be read by other websites. It is deleted by
-            your browser as soon as you leave this site. This website does not use any third party cookies, so your
-            visit here cannot be tracked by other websites.
-        </div>
-        <div id="about-cookies">
-            About cookies
-        </div>
+      <div id="more-about-cookies">
+        This website stores session information as a 'cookie' on your browser. This helps us show you the content
+        you want to see. This cookie does not identify you, and cannot be read by other websites. It is deleted by
+        your browser as soon as you leave this site. This website does not use any third party cookies, so your
+        visit here cannot be tracked by other websites.
+      </div>
+      <div id="about-cookies">
+        About cookies
+      </div>
     </div>
     <div id="footer">
        <div id="credits">
