--- a/resources/public/content/stylesheet.css
+++ b/resources/public/content/stylesheet.css
@@ -28,6 +28,47 @@ body {
   font-family: sans-serif;
 }
 
+/* footer of the page - not-editable, provided by Smeagol */
+footer {
+  border-top: thin solid gray;
+  clear: both;
+  font-size: smaller;
+  text-align: center;
+  color: gray;
+  background: rgba(224,224,224,0.95);
+  width: 100%;
+  margin: 0;
+  padding: 0.25em 0;
+  bottom:0;
+  position:fixed;
+  vertical-align: top;
+  z-index:150;
+  _position:absolute;
+  _top:expression(eval(document.documentElement.scrollTop+
+        (document.documentElement.clientHeight-this.offsetHeight)));
+}
+
+footer div {
+  padding: 0.1em;
+}
+
+
+/* header for all pages in the Wiki - editable, provided by users. */
+header {
+  margin-top: 0;
+  width:100%;
+  background-color: gray;
+  color: white;
+}
+
+header h1 {
+  margin-top: 0;
+}
+
+header img {
+  float: right;
+}
+
 /* ids generally in document order */
 
 /* top-of-page navigation, not editable, provided by Smeagol */
@@ -87,20 +128,8 @@ li.nav-item a:active { background: gray; color: white; }
 }
 
 
-/* header for all pages in the Wiki - editable, provided by users. Within main-container */
-#header {
-  margin-top: 0;
-  width:100%;
-  background-color: gray;
-  color: white;
-}
-
-#header h1 {
-  margin-top: 0;
-}
-
 /* left bar for all pages in the Wiki - editable, provided by users. Within main-container */
-#left-bar {
+#side-bar {
   width: 17%;
   height: 100%;
   float: left;
@@ -151,24 +180,6 @@ li.nav-item a:active { background: gray; color: white; }
 	display: block;
 }
 
-/* footer of the page - not-editable, provided by Smeagol */
-#footer {
-  clear: both;
-  font-size: smaller;
-  text-align: center;
-  color:white;
-  background:rgba(128,128,128,0.95);
-  width: 100%;
-  margin: 0;
-  padding: 0.25em 0;
-  bottom:0;
-  position:fixed;
-  vertical-align: top;
-  z-index:150;
-  _position:absolute;
-  _top:expression(eval(document.documentElement.scrollTop+
-        (document.documentElement.clientHeight-this.offsetHeight)));
-}
 
 
 .change {
