--- a/resources/templates/edit.html
+++ b/resources/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends "templates/base.html" %}
 {% block extra-headers %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+    <link rel="stylesheet" href="{{servlet-context}}/vendor/simplemde/dist/simplemde.min.css">
+    <script src="{{servlet-context}}/vendor/simplemde/dist/simplemde.min.js"></script>
 {% endblock %}
 
 {% block content %}
