--- a/resources/templates/passwd.html
+++ b/resources/templates/passwd.html
@@ -3,20 +3,20 @@
         <div id="content" class="auth">
             <form action="{{servlet-context}}/passwd" method="POST">
                 <p class="widget">
-                    <label for="password">Your password</label>
+                    <label for="oldpass">Your password</label>
                     <input name="oldpass" id="oldpass" type="password" required/>
                 </p>
                 <p class="widget">
-                    <label for="password">New password</label>
+                    <label for="pass1">New password</label>
                     <input name="pass1" id="pass1" type="password" required/>
                 </p>
                 <p class="widget">
-                    <label for="password">And again</label>
+                    <label for="pass2">And again</label>
                     <input name="pass2" id="pass2" type="password" required/>
                 </p>
                 <p class="widget">
                     <label for="submit">To edit this wiki</label>
-                    <input name="action" id="action" type="submit" class="action" value="Login!"/>
+                    <input name="action" id="action" type="submit" class="action" value="Change password!"/>
                 </p>
             </form>
         </div>
