--- a/resources/templates/edit-users.html
+++ b/resources/templates/edit-users.html
@@ -2,11 +2,20 @@
 
 {% block content %}
         <div id="content">
-          <ul>
+          <table>
+            <tr>
+              <th>Edit</th><th>Delete</th>
+            </tr>
             {% for user in users %}
-            <li><a href="edit-user?target={{user}}">{{user}}</a></li>
+            <tr>
+              <td><a href="edit-user?target={{user}}">Edit {{user}}</a></td>
+              <td><a href="delete-user?target={{user}}">Delete {{user}}</a></td>
+            </tr>
             {% endfor %}
-            <li><a href="edit-user">Add new user</a></li>
-          </ul>
+            <tr>
+              <td><a href="edit-user">Add new user</a></td>
+              <td></td>
+            </tr>
+          </table>
         </div>
 {% endblock %}
